# glslang

OGLCompilersDLL/: CMakeLists.txt
SPIRV/: CMakeLists.txt
StandAlone/: CMakeLists.txt
glslang/: CMakeLists.txt
glslang/OSDependent/Windows/: CMakeLists.txt
hlsl/: CMakeLists.txt
